<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/navigation_menu_settings" />

    <item android:title="@string/navigation_menu_feedback">
        <menu>
            <group android:id="@+id/navigation_group">
                <item
                    android:id="@+id/navigation_feedback"
                    android:icon="@drawable/ic_baseline_feedback_24"
                    android:title="@string/navigation_menu_leave_feedback" />
                <item
                    android:id="@+id/navigation_about"
                    android:icon="@drawable/ic_baseline_help_outline_24"
                    android:title="@string/navigation_menu_about" />
            </group>
        </menu>
    </item>
</menu>



