<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="12"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/note_title"
            style="@style/NoteHolderTitle"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/note_description"
            style="@style/NoteHolderDescription"
            tools:text="@string/description"/>
    </LinearLayout>

    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_weight="1"
        android:text="@string/default_date">
    </TextView>

</LinearLayout>