<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_header_height"
    android:background="@drawable/note_style"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/navigation_header_padding_left"
    android:paddingTop="@dimen/navigation_header_padding_top"
    android:paddingBottom="@dimen/navigation_header_padding_bottom"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <ImageView
        android:id="@+id/navigation_header_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/navigation_header"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/navigation_header_textview_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/navigation_textview_username_padding_top"
        android:text="@string/navigation_head_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigation_header_textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_head_email" />
</LinearLayout>